missing wsdl file in the distribution

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.rst
 include requirements.txt
 include docs/Makefile docs/conf.py
-recursive-include payline/templates *.html
+recursive-include payline/templates *.html *.wsdl
 recursive-include docs *.rst
