--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include README.rst
 include requirements.txt
 include docs/Makefile docs/conf.py
-recursive-include payline/templates *.html *.wsdl
+recursive-include payline/ *.wsdl
+recursive-include payline/templates *.html
 recursive-include docs *.rst
