--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include README.rst
 include requirements.txt
 include docs/Makefile docs/conf.py
-include payline/DirectPaymentAPI.wsdl
+include payline/DirectPaymentAPI*.wsdl
 recursive-include payline/templates *.html
 recursive-include docs *.rst
