--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 env:
   - DJANGO_VERSION=1.3
   - DJANGO_VERSION=1.4
+  - DJANGO_VERSION=1.5
+  - DJANGO_VERSION=1.6
 before_install:
   - export PIP_USE_MIRRORS=true
   - export PIP_INDEX_URL=https://simple.crate.io/
@@ -13,7 +15,7 @@ install:
   - pip install -e .
   - pip install -r requirements.txt Django==$DJANGO_VERSION
 before_script:
-  - flake8 payline
+  - flake8 payline --exclude=migrations
 script:
   - make test
 branches:
